From 3efbc16 (memavail):
=======================

In scripts/run_prisim.py,

(*) Update handling of MPI on baseline axis

From 557dbe9 (memavail):
=======================

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, add
input vmemavail (for virtual memory available) for calculations and
update calculations based on this input. Update member function
docstring accordingly

In scripts/run_prisim.py,

(*) Define a variable pvmemavail based on dividing the memory
available by the number of processes
(*) In calls to member function observe() of class
InterferometerArray, pass the parameter pvmemavail for the input
vmemavail

From 675162a (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add parameter 'memavail' to specify total amount of memory
available explicitly.

In scripts/run_prisim.py,

(*) Adapt to use explicitly specified memory available based on
changes above or estimate it implicitly as before. 

From cbdfd48 (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add input parameter 'resource_monitor' to choose whether to
display the resource monitor or not

In scripts/run_prisim.py,

(*) Adapt to either display the resource monitor or not based on
corresponding changes above.

From 1dd0c3b (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add input parameter 'uvh5' under 'save_formats' to save output in
uvh5 format of pyuvdata module.

In prisim/interferometry.py,

(*) Rename member function write_uvfits() in class InterferometerArray
to pyuvdata_write() with input parameters changed to handle UVFITS and
UVH5 formats. Update member function and its docstring accordingly.
Also change class docstring accordingly
(*) Update inputs for member function write() of class
InterfereometerData to accept both 'uvh5' and 'uvfits' as valid output
formats. Update member function to handle both formats. Update member