@@ -1,3 +1,10 @@
+From c41685f (memavail):
+=======================
+
+In scripts/run_prisim.py,
+
+(*) Write chunking information in metainfo directory
+
 From 3efbc16 (memavail):
 =======================
 
